<resources>
    <string name="app_name">Project Listing</string>

    <string name="exercise_listing_title">Exercise Listing</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="xlarge">X-Large</string>
    <string name="size_help">Size Help</string>
    <string name="select_a_size">Select a size</string>
    <string name="view">View</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
</resources>
