<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/lato_light_font"
        android:padding="@dimen/padding_5dp"
        tools:text="£149"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_300dp"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintTop_toBottomOf="@id/product_price"/>

    <TextView
        android:id="@+id/selected_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/product_image"
        android:fontFamily="@font/lato_bold_font"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/select_a_size"
        android:padding="@dimen/padding_10dp"/>

    <TextView
        android:id="@+id/size_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/product_image"
        android:fontFamily="@font/lato_bold_font"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/size_help"
        android:textAllCaps="true"
        android:padding="@dimen/padding_10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_size">

        <TextView
            android:id="@+id/small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold_font"
            android:textColor="@android:color/black"
            android:text="@string/small"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="@dimen/padding_10dp"/>

        <TextView
            android:id="@+id/medium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold_font"
            android:textColor="@android:color/black"
            android:text="@string/medium"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="@dimen/padding_10dp"/>

        <TextView
            android:id="@+id/large"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold_font"
            android:textColor="@android:color/black"
            android:text="@string/large"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="@dimen/padding_10dp"/>

        <TextView
            android:id="@+id/xlarge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold_font"
            android:textColor="@android:color/black"
            android:text="@string/xlarge"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="@dimen/padding_10dp"/>

    </LinearLayout>









</android.support.constraint.ConstraintLayout>