<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    android:elevation="4dp">

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@drawable/option_drawable">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/sort"/>

    <ImageView
        android:layout_width="@dimen/size_10dp"
        android:layout_height="@dimen/size_10dp"
        android:src="@drawable/expand_button"
        android:rotation="90"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_25dp"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/option_drawable">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_15dp"
            android:text="@string/view"/>

        <ImageView
            android:layout_width="@dimen/size_10dp"
            android:layout_height="@dimen/size_10dp"
            android:src="@drawable/expand_button"
            android:rotation="90"
            android:layout_marginLeft="@dimen/margin_25dp"
            android:layout_marginTop="@dimen/margin_20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/option_drawable">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_15dp"
            android:text="@string/filter"/>

    </LinearLayout>


</LinearLayout>